// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clearbutton snapshot Should not render 1`] = `
<div
  className="input-group-addon false "
  onClick={[Function]}
>
  X
</div>
`;

exports[`Clearbutton snapshot Should render correctly 1`] = `
<div
  className="input-group-addon visible "
  onClick={[Function]}
>
  X
</div>
`;
